--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:text="CUSTOM VIEW SNACKBAR"
     tools:context=".LoginActivity">
-
     <!-- Login progress -->
     <ProgressBar
         android:id="@+id/login_progress"
