--- a/app/src/main/res/layout/three_buttons_layout.xml
+++ b/app/src/main/res/layout/three_buttons_layout.xml
@@ -17,24 +17,28 @@
         android:background="@drawable/red_round_button"
         android:text="@string/danger" />
 
-    <Button
-        android:id="@+id/problem_button"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@drawable/orange_round_button"
-        android:text="@string/problem"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="280dp"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/danger_button" />
+        app:layout_constraintTop_toBottomOf="@+id/danger_button">
 
-    <Button
-        android:id="@+id/safe_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="15dp"
-        android:background="@drawable/green_round_button"
-        android:text="@string/safe"
-        app:layout_constraintStart_toEndOf="@+id/problem_button"
-        app:layout_constraintTop_toBottomOf="@+id/danger_button" />
+        <Button
+            android:id="@+id/safe_button"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/green_round_button"
+            android:text="@string/safe"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/problem_button"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/orange_round_button"
+            android:text="@string/problem"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
