Creation DBManager + recupération des groupes dans la BDD

--- a/app/src/main/res/layout/group_detail.xml
+++ b/app/src/main/res/layout/group_detail.xml
@@ -29,6 +29,13 @@
             android:padding="16dp"
             android:textIsSelectable="true"
             tools:context="com.project.safegroup.GroupDetails.GroupDetailFragment" />
+
+        <ListView
+            android:id="@+id/listUsers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
