--- a/app/src/main/res/layout/group_selection.xml
+++ b/app/src/main/res/layout/group_selection.xml
@@ -9,8 +9,8 @@
 
     <ListView
         android:id="@+id/groupSelectionList"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintBlueLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
