Members Fragment Finish

--- a/app/src/main/res/layout/group_detail_expandable_item.xml
+++ b/app/src/main/res/layout/group_detail_expandable_item.xml
@@ -21,6 +21,8 @@
 
 
     <Button
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:id="@+id/buttonState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
