--- a/app/src/main/res/layout/group_detail_expandable.xml
+++ b/app/src/main/res/layout/group_detail_expandable.xml
@@ -20,7 +20,7 @@
     <ExpandableListView
         android:id="@+id/expandableListGroup"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
