SHITTY BUG ON APP BAR REAMAINING
But all is manage with fragment

--- a/app/src/main/res/layout-w900dp/group_list.xml
+++ b/app/src/main/res/layout-w900dp/group_list.xml
@@ -9,13 +9,8 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context="com.project.safegroup.GroupDetails.GroupListActivity">
+    tools:context="com.project.safegroup.GroupDetails.GroupList">
 
-    <!--
-    This layout is a two-pane layout for the Groups
-    master/detail flow.
-    
-    -->
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
