--- a/app/src/main/res/layout/group_detail_expandable_item_expanded.xml
+++ b/app/src/main/res/layout/group_detail_expandable_item_expanded.xml
@@ -15,8 +15,27 @@
         android:layout_marginTop="8dp"
         android:text="Description"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/askButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="@string/askState"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/memberDescription" />
+
+    <Button
+        android:id="@+id/changeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="@string/changeState"
+        app:layout_constraintStart_toEndOf="@+id/askButton"
+        app:layout_constraintTop_toBottomOf="@+id/memberDescription" />
 
 </android.support.constraint.ConstraintLayout>
