--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="colorRedButton">#DD4444</color>
     <color name="colorOrangeButton">#DD9944</color>
     <color name="colorGreenButton">#44DD44</color>
+    <color name="colorGreenDarkButton">#447044</color>
+    <color name="colorGreyButton">#888888</color>
     <color name="colorBlueButton">#4444DD</color>
     <color name="colorOutsideButton">#222233</color>
 
@@ -14,6 +16,8 @@
         <item>@color/colorRedButton</item>
         <item>@color/colorOrangeButton</item>
         <item>@color/colorGreenButton</item>
+        <item>@color/colorGreenDarkButton</item>
+        <item>@color/colorGreyButton</item>
         <item>@color/colorOutsideButton</item>
     </array>
 </resources>
