--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="colorGreyButton">#888888</color>
     <color name="colorBlueButton">#4444DD</color>
     <color name="colorOutsideButton">#222233</color>
+    <color name="light_grey_color">#99C</color>
+    <color name="light_white_color">#BBE</color>
+
 
     <array name="state_color">
         <item>@color/colorRedButton</item>
